{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 4,
  "lineage": "bf5d9ef2-0e6e-2bc2-10b5-3cc6d4e64860",
  "resources": [
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:274998209938:security-group/sg-0b43946c176cac379",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0b43946c176cac379",
            "ingress": [],
            "name": "my-cluster20200512204348296300000002",
            "name_prefix": "my-cluster",
            "owner_id": "274998209938",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-cluster-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-b456cbce"
          }
        }
      ]
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_private_access",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_kubelet",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.my-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    }
  ]
}